# chatek

./: .CFUserTextEncoding  .bash_profile  .lesshst  .viminfo
.Trash/: coveralls.json
.bash_sessions/: 0C3D0ECB-7EB0-42D3-9706-D99CEAD51F3E.history  0C3D0ECB-7EB0-42D3-9706-D99CEAD51F3E.session  0E05592E-932B-4AFA-9778-ADE3D044A5DD.history  0E05592E-932B-4AFA-9778-ADE3D044A5DD.session  12238D58-9EE8-44DD-875F-9D149C17EA8F.historynew  17DA3B7C-2A0E-408A-A0AC-EC0B88BD661B.history  17DA3B7C-2A0E-408A-A0AC-EC0B88BD661B.session  18E675BC-F1CE-4D6C-854B-96E5FC2BC2F5.history  18E675BC-F1CE-4D6C-854B-96E5FC2BC2F5.session  22EC5CC5-8A8E-43AE-B925-1894403120F0.history  22EC5CC5-8A8E-43AE-B925-1894403120F0.session  231E847C-4B35-41DA-B9E2-6A0B97A1F90A.history  231E847C-4B35-41DA-B9E2-6A0B97A1F90A.session  25BD4D20-558C-433E-8377-AD24FA1059C1.history  25BD4D20-558C-433E-8377-AD24FA1059C1.session  27E087AF-D186-4A6A-92CD-1AFC47CCCCAC.history  27E087AF-D186-4A6A-92CD-1AFC47CCCCAC.session  2F7AF898-3951-4C47-B0F2-8944EA3EBE9A.history  2F7AF898-3951-4C47-B0F2-8944EA3EBE9A.session  33076B53-80F2-4092-ADE6-724286FEABD9.history  33076B53-80F2-4092-ADE6-724286FEABD9.session  37FAA9FA-A2BC-4D79-971E-647C16B5CDC1.history  37FAA9FA-A2BC-4D79-971E-647C16B5CDC1.session  39553EAC-34C1-4519-BC1E-76EDE0CD08F6.history  39553EAC-34C1-4519-BC1E-76EDE0CD08F6.session  41BBFDBE-B4C3-42D1-8ACD-481BD48706E0.history  41BBFDBE-B4C3-42D1-8ACD-481BD48706E0.session  42FBFEA3-B737-4EDC-974E-EE8C55E17F8E.history  42FBFEA3-B737-4EDC-974E-EE8C55E17F8E.session  (+62 more)
CLionProjects/untitled/: CMakeLists.txt
(+178 files in other folders)
